# Hyperion

./: .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_ROADMAP.md  Agents.md  BUILD_STATUS.md  CMakeLists.txt  CMakePresets.json  CODEAGENT.md  CONTRIBUTING.md  DEVELOPMENT.md  DOCUMENTATION_INVENTORY.md  DOCUMENTATION_REORGANIZATION.md  Dockerfile  EXAMPLES.md  FAQ.md  FIRST_STEPS.md  FUTURE_UPDATES.md  GODMODE_COMMIT_MESSAGE.md  GODMODE_ENHANCEMENT_PLAN.md  HYBRID_CAPABILITIES.md  HYBRID_ROADMAP.md  IMPLEMENTATION_STATUS.md  LICENSE  MASTER.md  NEXT_STEPS.md  PROJECT_PROGRESS.md  PROJECT_STATUS.md  QUICK_START.md  Qoder.md  Qoder_previous_chat.md  README.md  README_HYBRID.md  STATUS.md  TECHNICAL_DOCUMENTATION.md  TESTING_IMPLEMENTATION.md  TEST_PLAN.md  VISUAL_STUDIO_GUIDE.md  VSCODE_TERMINAL_GUIDE.md  (+20 more)
.devcontainer/: .env  Dockerfile  activepieces-setup.sh  code-server-launch.sh  compose.yaml  deploy-swarm.sh  devcontainer.json  entrypoint.sh  logs-ide.sh  remove-swarm.sh  stack.yaml  start-ide.sh  stop-ide.sh
.github/workflows/: ci-cd.yml
.qoder/quests/: file-name-in-english-no-special-characters-except-hyphens....md  general-inquiry.md  hyperion-analysis.md  repo-summary-report.md
cloud/aws/: hyperion-cloudformation.yaml
core/: activation.c  activation.h  config.c  config.h  config_persist.c  config_persist.h  enhanced_errors.c  enhanced_errors.h  generation.c  generation.h  io.c  io.h  logging.c  logging.h  memory.c  memory.h  memory_optimization_validator.c  picol.c  picol.h  platform_compatibility_validator.c  rules_engine.c  rules_engine.h  runtime.c  runtime.h
core/mcp/: mcp_client.c  mcp_client.h
data/: hyperion_vocab.tok  model_config.json  sample_text.txt
docs/: API_REFERENCE.md  index.md
docs/api/: api_reference.md  core.md  forward_scheduler.md  memory.md  mmap_loader.md  models.md  optimization.md  performance.md
docs/community/: workshops.md
docs/examples/: chatbot.md  deployment_autoscaling.md  document_processor.md  media_tagging.md  memory_efficiency.md
docs/getting-started/: installation.md  quickstart.md
docs/guides/: architecture.md  debugging.md  deployment.md  getting_started.md  memory.md  operations_playbook.md  performance.md  phase6_summary.md  phase7_sdk.md
docs/roadmap/: phase7.md
examples/: BEGINNER.md  CMakeLists.txt  EXAMPLES_INDEX.md  advanced_streaming_server.c  beginner_hello_world.c  intermediate_file_processor.c
examples/audio/: CMakeLists.txt
examples/audio/keyword_spotting/: CMakeLists.txt  README.md  kws.c  kws.h  main.c
examples/audio/speech_recognition/: CMakeLists.txt  README.md  asr.c  asr.h  main.c
examples/audio/voice_detection/: CMakeLists.txt  README.md  main.c  vad.c  vad.h
examples/chatbot/: CMakeLists.txt  README.md  chat_model.c  chat_model.h  main.c
examples/complete_demo/: README.md  main.c
examples/document_processor/: CMakeLists.txt  README.md  document_processor.c  document_processor.h  main.c
examples/image_recognition/: CMakeLists.txt  README.md  image_classifier.c  image_classifier.h  main.c
examples/media_tagging/: CMakeLists.txt  README.md  main.c  media_tagger.c  media_tagger.h
interface/: cli.c  cli.h  cli_completion.h  generation.c  generation.h  index.html  main.c  web_server.c  web_server.h  websocket.c  websocket.h  websocket_test.html
k8s/: hyperion-deployment.yaml
models/: model_format.c  model_format.h
models/audio/: audio_features.c  audio_features.h  audio_model.c  audio_model.h  audio_utils.c  audio_utils.h
models/image/: forward_pass.c  image_model.c  image_model.h  image_model_internal.h  image_test.c  image_utils.c  image_utils.h  stb_image_loader.c
models/multimodal/: README.md  cross_modal_attention.c  cross_modal_attention.h  fusion.c  fusion.h  multimodal_model.c  multimodal_model.h  vision_language_integration.h
models/pretrained/: README.md
models/text/: attention.c  attention.h  generate.c  generate.h  hybrid_generate.c  hybrid_generate.h  lora.c  lora.h  model.c  model.h  (+4 more)
ros2/: autonomy_monitor.c  autonomy_monitor.h  autonomy_pipeline.c  autonomy_pipeline.h  control_bridge.c  control_bridge.h  perception_bridge.c  perception_bridge.h  text_to_action_node.c  text_to_action_node.h
samples/: sample_text.txt
scripts/: validate_build_configs.sh
tests/: CMakeLists.txt  memory_validation_suite.c  performance_benchmark_suite.c  test_advanced_quantization.c  test_attention.c  test_audio_model.c  test_auto_scaler.c  test_cache_opt.c  test_cli.c  test_deployment_manager.c  test_depthwise_conv.c  test_distributed_inference.c  test_framework.c  test_framework.h  test_generate.c  test_hybrid.c  test_image_model.c  test_io.c  test_large_model_memory.c  test_logging.c  test_lora.c  test_main.c  test_memory.c  test_memory_analysis.c  test_memory_efficient_tensor.c  test_memory_optimization_validator.c  test_memory_pool.c  test_mixed_precision.c  test_mmap_loader.c  test_model_format.c  test_monitoring_center.c  test_multimodal.c  test_multimodal_enhanced.c  test_neural_architecture_search.c  test_oom_handling.c  test_performance_impact.c  test_performance_monitor.c  test_progressive_loading.c  test_ros2_monitor_stub.c  test_ros2_pipeline_stub.c  (+11 more)
tools/: test_pipeline.bat  test_pipeline.sh
utils/: advanced_memory_pool.c  advanced_memory_pool.h  advanced_quantization.c  advanced_quantization.h  auto_scaler.c  auto_scaler.h  benchmark.c  benchmark.h  cache_opt.c  cache_opt.h  deployment_manager.c  deployment_manager.h  distributed_inference.c  distributed_inference.h  forward_scheduler.c  forward_scheduler.h  layer_scheduler.c  layer_scheduler.h  memory_analysis.c  memory_analysis.h  memory_efficient_tensor.c  memory_efficient_tensor.h  memory_optimizer.c  memory_optimizer.h  memory_pool.c  memory_pool.h  memory_profiler.h  mmap_loader.c  mmap_loader.h  model_loader.c  model_loader.h  monitoring_center.c  monitoring_center.h  neural_architecture_search.c  neural_architecture_search.h  performance_impact.c  performance_impact.h  performance_monitor.c  performance_monitor.h  progressive_loader.c  (+22 more)
web_ui/: index.html  script.js
(+42 files in other folders)
